--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.1.6",
     "@supabase/supabase-js": "^2.43.5",
+    "lucide-react": "^0.536.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18",
