--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
