--- a/package.json
+++ b/package.json
@@ -8,22 +8,25 @@
     "start": "next start",
     "worker": "node dist/worker/index.js",
     "dev:worker": "ts-node-dev --respawn worker/index.ts"
-},
+  },
   "dependencies": {
     "@clerk/nextjs": "^5.1.6",
     "@google/generative-ai": "^0.14.1",
+    "@radix-ui/react-progress": "^1.1.7",
     "@supabase/supabase-js": "^2.43.5",
     "@vercel/blob": "^1.1.1",
     "bullmq": "^5.56.9",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^18",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.13",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
