--- a/.env.local
+++ b/.env.local
@@ -19,9 +19,9 @@ DEEPGRAM_API_KEYS="b3f4599dbe0e81206af1d3e333a87b6829c2f2bd,f702d01a68749bc0d5ea
 
 # You will get these from the deployment steps below
 # Use the TCP connection details from your Upstash dashboard
-UPSTASH_REDIS_HOST="certain-stallion-21928.upstash.io"
+UPSTASH_REDIS_HOST="witty-sheep-47635.upstash.io"
 UPSTASH_REDIS_PORT="6379"
-UPSTASH_REDIS_PASSWORD="AVWoAAIjcDFlZTdjMzg2MGEwNmM0NTEzYjNkMDJhMWIzZTBiMTEzZXAxMA"
+UPSTASH_REDIS_PASSWORD="AboTAAIjcDFjNDExN2EzNDU2MjQ0OTA5OWFmY2ExOTlhYjI5ZTYyOHAxMA"
 
 # Vercel Blob Storage ID (you'll get this from your Vercel project)
 BLOB_READ_WRITE_TOKEN="vercel_blob_rw_O8xZZVKSAbvDHhUI_rectYLuUtyuwxWljCe3Vm7ZJUtxAHK"
