--- a/.env.local
+++ b/.env.local
@@ -4,6 +4,7 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzd
 
 
 # Add multiple comma-separated keys for both services
-GEMINI_API_KEY="AIzaSyCbgAs0rGHkV9NWE4q4-PkNyhGE0sBKdFo"
+GEMINI_API_KEY="AIzaSyC5G3DiaKxmeLwqv231qSjtFoHi4CNhSAQ"
 DEEPGRAM_API_KEY="adb532e2cf9f7979d80daebfaf7d4e4ce9037620"
 DEEPGRAM_PROJECT_ID="4036c3a2-0c27-40bf-886f-40148de2b251"
+# ... your other keys
